fix various issues on mobile and desktop

--- a/wp-content/themes/WesternCarolina/assets/sass/modules/_card.sass
+++ b/wp-content/themes/WesternCarolina/assets/sass/modules/_card.sass
@@ -1,5 +1,5 @@
 .card 
-  padding: 60px 40px
+  padding: 60px 30px
   background: #fff
   @include media-breakpoint-up(lg)
     padding: 60px
