--- a/wp-content/themes/WesternCarolina/assets/sass/modules/_form-banner.sass
+++ b/wp-content/themes/WesternCarolina/assets/sass/modules/_form-banner.sass
@@ -1,8 +1,8 @@
 .form-banner
-
   align-items: start
   position: relative
-
+  max-width: 1680px
+  margin: 0 auto
   @include media-breakpoint-up(lg)
     gap: 30px
     display: grid
@@ -27,16 +27,16 @@
       img
         height: 920px
         object-fit: cover
-
     img
       width: 100%
   .card
     z-index: 2
-    margin: -180px 30px 0
+    margin: -120px 10px 0
     position: relative
     z-index: 12
-    padding: 40px
+    padding: 30px
     @include media-breakpoint-up(lg)
+      margin: -180px 30px 0
       padding: 60px
       // margin: 
       grid-row: 1
