--- a/wp-content/themes/WesternCarolina/assets/sass/modules/_image-banner.sass
+++ b/wp-content/themes/WesternCarolina/assets/sass/modules/_image-banner.sass
@@ -1,7 +1,12 @@
 .image-banner
   position: relative
   display: grid
-  gap: 20px
+
+  max-width: 1680px
+  margin: 0 auto
+  @include media-breakpoint-up(lg)
+    gap: 20px
+
   .pattern
 
     grid-column: 1 / span 12
