--- a/wp-content/themes/WesternCarolina/assets/sass/modules/_map-feauture.sass
+++ b/wp-content/themes/WesternCarolina/assets/sass/modules/_map-feauture.sass
@@ -9,25 +9,28 @@
   @include media-breakpoint-up(lg)
     background-size: 800px
     padding-bottom: 0
-  &::after
-    content: ""
-    display: block
-    background-image: url(../img/texture-torn-down.png)
-    background-size: 100%
-    width: 100%
-    position: absolute
-    height: 80px
-    background-repeat: repeat-x
-    bottom: -75px
-    z-index: 10
-    @include media-breakpoint-up(lg)
-      // bottom: -100px
-      height: 110px
   .container
+    padding: 0
+    figure
+      overflow: hidden
+      margin-bottom: -60px
+      @include media-breakpoint-up(lg)
+        margin-bottom: 0
+      img
+        width: 145vw
+        position: relative
+        left: -30vw
+        max-width: none
+        
+        // position: absolute
+    @include media-breakpoint-up(lg)
+      padding: 0 30px
     .content
       z-index: 12
       position: relative
-
+      padding: 0 30px
+      @include media-breakpoint-up(lg)
+        padding: 0
       > h3
         color: $type_color
         &::after
@@ -66,6 +69,9 @@
         img
           width: 100%
           margin-left: -80px
+          left: 0
+          position: static
+          max-width: 100%
       .content
         grid-column: 9 / span 4
         grid-row: 1
