--- a/wp-content/themes/WesternCarolina/assets/sass/modules/_slider.sass
+++ b/wp-content/themes/WesternCarolina/assets/sass/modules/_slider.sass
@@ -5,9 +5,8 @@
   margin-top: 20px
   padding-top: 80px
   padding-bottom: 120px
-  .tns-outer
-    max-width: 1580px
-    margin: 0 auto
+  max-width: 1680px
+  margin: 0 auto
 
   &::after
     content: ''
