--- a/wp-content/themes/WesternCarolina/assets/sass/modules/_video-hero.sass
+++ b/wp-content/themes/WesternCarolina/assets/sass/modules/_video-hero.sass
@@ -1,6 +1,7 @@
 .video-hero
   position: relative
   display: grid
+  overflow: hidden
   &::after
     content: ""
     height: 100%
@@ -17,16 +18,19 @@
     z-index: 3
     align-items: center
     display: grid
+    grid-template-columns: 1fr
     @include media-breakpoint-up(lg)
       grid-template-columns: repeat(12, 1fr)
     .content
       text-align: center
+      grid-column: 1 / span 1
       @include media-breakpoint-up(lg)
-      grid-column: 3 / span 8
+        grid-column: 3 / span 8
 
       h1, p
         color: #fff
       h1
+        // font-size: 4rem
         @include media-breakpoint-up(lg)
           font-size: 7rem
         @include media-breakpoint-up(xl)
@@ -41,15 +45,33 @@
           margin: 0 auto 30px
 
   .video-embed
+
     grid-row: 1
-    grid-column: 1
-    width: 100%
-    position: relative
-    padding-bottom: 52.8%
-    height: 0
-    video
-      position: absolute
-      top: 0
-      left: 0
+    grid-column: 1 / span 1
+    overflow: hidden
+    min-height: 40vh
+
+    @include media-breakpoint-up(lg)
+      grid-column: 1 / span 12
       width: 100%
-      height: 100%
+      position: relative
+      padding-bottom: 52.8%
+      height: 0
+    video
+      width: 110vh
+      position: absolute
+      margin: auto
+      left: -100vw
+      top: 0
+      right: 0  
+      @include media-breakpoint-up(sm)
+        left: -60vw
+      @include media-breakpoint-up(md)
+        left: -30vw
+
+      @include media-breakpoint-up(lg)
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
